--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-md-editor": "^3.20.5",
     "@waves/waves-browser-bus": "^0.2.7",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.17.2",
