--- a/package.json
+++ b/package.json
@@ -57,5 +57,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@webpack-cli/generators": "^3.0.1",
+    "webpack-cli": "^5.0.1"
   }
 }
